--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
          </p>
       </div>
    </div>
-   <div id="time" class="date"></div>
+   <!-- <div id="time" class="date"></div> -->
    <p class="dance-med">
       अर्पित है अति प्रेम सहित श्रीमान निमंत्रण यह लेना | <br>आनंद भरे शुभ अवसर पर परिवार सहित दर्शन देना ||
    </p>
