--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
    <div class="wrap">
       <div class="title">
-         <!-- <h1>राधा</h1>
+         <h1>डॉ. राधा</h1>
          <h2>संग</h2>
-         <h1>नवीन</h1> -->
-         <img src="./assets/img/weds.png" class="weds" alt="abad">
+         <h1>नवीन</h1>
+         <!-- <img src="./assets/img/weds.png" class="weds" alt="abad"> -->
          <h3>।। मांगलिक परिणयोत्सव ।।</h3>
          <p>
             <span class="event"> लग्न </span><span class="date">25 जनवरी 2023</span></29>,<span class="place"> सुबह
@@ -61,7 +61,7 @@
                <span class="date">05:15 बजे</span><span></span> <br />
          </p>
          <p>
-            <span class="event">धुकाव </span><span class="date">27 जनवरी 2023</span></29>,<span class="place"> रात्री
+            <span class="event">ढूकाव </span><span class="date">27 जनवरी 2023</span></29>,<span class="place"> रात्री
                <span class="date">08:15 बजे</span><span></span> <br />
          </p>
          <p>
@@ -81,19 +81,22 @@
    <div class="music">
       <audio src="./assets/mp3/background.mp3" id="my_audio" loop="loop"></audio>
    </div>
-   <p class="happiness2">सौ.कां. डॉ. राधा<br><span class="inviter"><b>सुपौत्री स्व. श्रीमती बनारसी देवी एवं श्री लोकराम जी<br>सुपुत्री श्रीमती नीलम देवी एवं श्री संत कुमार<br>निवासी- बनगोठड़ी कलाँ</b><br></span></p>
-   <p class="happiness2">चि. नवीन<br><span class="inviter"><b>सुपौत्र स्व. श्रीमती मेवा देवी एवं श्री रतिराम जी<br>सुपुत्र श्रीमती सुनिता देवी एवं श्री अजय कुमार जी<br>निवासी- बडबर (बुहाना)</b><br></span></p>
+   <p class="happiness2">सौ.कां. डॉ. राधा<br><span class="inviter"><b>सुपौत्री स्व. श्रीमती बनारसी देवी एवं श्री लोकराम जी<br>सुपुत्री श्रीमती नीलम देवी एवं श्री सन्त कुमार<br>निवासी- बनगोठड़ी कलाँ</b><br></span></p>
+   <p class="happiness2">चि. नवीन<br><span class="inviter"><b>सुपौत्र श्रीमती मेवा देवी एवं स्व. श्री रतिराम जी चोयल<br>सुपुत्र श्रीमती सुनिता देवी एवं श्री अजय कुमार जी<br>निवासी- बडबर (बुहाना)</b><br></span></p>
 
    <p class="happiness">ननिहाल पक्ष<br><span class="inviter"><b>श्री नागरमल जी (नानाजी)<br> प्रकाश जी, लोकेश जी, सुभाष जी, पवन जी,<br> गोपी जी, प्रमोद जी, पुरुषोत्तम जी (मामाजी)</b><br></span></p>
    <p class="happiness">भुआजी-फुफाजी पक्ष<br><span class="inviter"><b>संतोष एवं श्री विनोद कुमार जी<br> मंजु एवं श्री शिव कुमार जी<br>आशीष ,अक्षय, मोहित, रोहित</b><br></span></p>
    <p class="happiness">विशेष आग्रह<br><span class="inviter"><b>संजय, अवतार, योगेंद्र</b><br></span></p>
 
    <p class="happiness">दर्शनाभिलाषी<br><span class="inviter"><b>प्रहलाद, महावीर, रामसिंह, महेंद्र, उम्मेद, जगराम, हवासिंह, राजेन्द्र,
-            सुरेश, जय कुमार, विजय, किशोरीलाल, कृष्ण, सुरेन्द्र, ओमप्रकाश, महेश, अनिल, मुकेश<br>एवं समस्त परिवार</span>
+            सुरेश, जय कुमार, विजय कुमार, किशोरीलाल, कृष्ण, सुरेन्द्र, ओमप्रकाश, महेश, अनिल, मुकेश, अरुण, वरुण<br>एवं समस्त काखवाल परिवार</span>
    </p>
    <p class="happiness">बाल मनुहार<br><span class="inviter"><b>मनन, कियान, मधु, किंशु, प्रिंस, अर्जुन, ऐनी, ट्विंकल,
-            हर्ष, वरुण, श्रेष्ठ</b><br></span>
+            हर्ष, श्रेष्ठ</b><br></span>
       </span></p>
+   <p class="happiness">विनीत<br><span class="inviter"><b>श्री सन्त कुमार जाँगिड़<br></b>(प्रधानाचार्य रा.उ.मा.वि. नगरासर)<br><b>ग्राम पो. - बनगोठड़ी कलाँ<br> वाया - पिलानी<br>जिला - झुंझुनूं(राज.)<br>मो.- 9461105190, 9413642423</b><br></span>
+   </span></p>
+      
    <p class="happiness">स्थान<br>
 <a href="https://maps.app.goo.gl/n2otVZcRxny7TjJE6">
    <img class="map" src="./assets/img/home-satellite.jpg" alt="">
