--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
       <div class="venue"><strong>शुभ विवाह</strong></div>
       </a>
    </div>
-   <div class="music">
-      <audio src="./assets/mp3/background.mp3" id="my_audio" loop="loop"></audio>
-   </div>
-   <p class="happiness2">सौ.कां. डॉ. राधा<br><span class="inviter"><b>सुपौत्री स्व. श्रीमती बनारसी देवी एवं श्री लोकराम जी<br>सुपुत्री श्रीमती नीलम देवी एवं श्री सन्त कुमार<br>निवासी- बनगोठड़ी कलाँ</b><br></span></p>
+   <!-- <div class="music"> -->
+      <!-- <audio src="./assets/mp3/background.mp3" id="my_audio" loop="loop"></audio> -->
+   <!-- </div> -->
+   <p class="happiness2">सौ.कां. डॉ. राधा<br><span class="inviter"><b>सुपौत्री स्व. श्रीमती बनारसी देवी एवं स्व. श्री लोकराम जी<br>सुपुत्री श्रीमती नीलम देवी एवं श्री सन्त कुमार<br>निवासी- बनगोठड़ी कलाँ</b><br></span></p>
    <p class="happiness2">चि. नवीन<br><span class="inviter"><b>सुपौत्र श्रीमती मेवा देवी एवं स्व. श्री रतिराम जी चोयल<br>सुपुत्र श्रीमती सुनिता देवी एवं श्री अजय कुमार जी<br>निवासी- बडबर (बुहाना)</b><br></span></p>
 
    <p class="happiness">ननिहाल पक्ष<br><span class="inviter"><b>श्री नागरमल जी (नानाजी)<br> प्रकाश जी, लोकेश जी, सुभाष जी, पवन जी,<br> गोपी जी, प्रमोद जी, पुरुषोत्तम जी (मामाजी)</b><br></span></p>
